--- a/src/style/modules/bookDetail.css
+++ b/src/style/modules/bookDetail.css
@@ -119,4 +119,116 @@
     align-items: center;
 }
 
+@media (max-width: 1190.98px) {
+    .back__btn{
+        margin-right: 10vw;
+    }
+    .details__box-text-title h2{
+        font-size: 32px;
+        line-height: 40px;
+    }
+    
+    
+
+}
+@media (max-width: 1050.98px) {
+    .back__btn{
+        margin-right: 12vw;
+    }
+    .details__box-text-title h2{
+        font-size: 28px;
+        line-height: 36px;
+    }
+    .details__container{
+        width: 90vw;
+    }
+    
+    
+
+}
+
+@media (max-width: 800.98px) {
+    .details__box-text-title {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-right: 0;
+    }
+
+    .details__box-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .details__box-description li{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .details__box-description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* flex-wrap: wrap;
+        padding: 5% 0;
+        list-style: none;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 23px;
+        line-height: 34px;
+        color: #000000; */
+    }
+    
+    
+
+}
+
+@media (max-width: 600.98px) {
+    .details__title{
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 32px;
+        color: #000000;
+        margin: 0px 0px 20px 0px;
+    }
+    .details__box-buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    
+
+}
+@media (max-width: 600.98px) {
+    .details__title{
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 32px;
+        color: #000000;
+        margin: 0px 0px 20px 0px;
+    }
+    /* .details__box-buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    } */
+    
+    
+
+}
 
